<resources>
    <string name="app_name">Drive</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">Already have an account? <b>Sign in</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="repair_types">
        <item>Air Conditioning</item>
        <item>Air filter</item>
        <item>Battery</item>
        <item>Belts</item>
        <item>Body/Chassis</item>
        <item>Brake Fluid</item>
        <item>Cabin Air Filter</item>
        <item>Cutch System</item>
        <item>Engine Repair</item>
        <item>Fuel Filter</item>
        <item>Fuel Pump</item>
        <item>New Tires</item>
        <item>Seat Belts</item>
        <item>Steering System</item>
        <item>Technical Control</item>
        <item>Wheel Alignment</item>

    </string-array>
</resources>